fix: 마인드맵 차트 노드 시각화 완료, 키워드 수정 필요